[tool.poetry]
name = "indexer"
version = "0.1.0"
description = "Web3 indexer with Apibara"
authors = []

[tool.poetry.scripts]
indexer = "indexer.main:cli"

[tool.poetry.dependencies]
python = ">3.8,<3.10"
click = "^8.1.3"
pymongo = {extras = ["srv"], version = "^4.3.3"}
strawberry-graphql = {extras = ["debug-server"], version = "^0.168.1"}
aiohttp = "^3.8.4"
aiohttp-cors = "^0.7.0"
starknet-py = {version = "^0.17.0a0", allow-prereleases = true}
apibara = "0.7.3a5"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
